feat: implement music player core logic and configure project environment settings